fixed the min,sec,hr hands ,

--- a/Projects/Clock/clock.html
+++ b/Projects/Clock/clock.html
@@ -20,30 +20,36 @@
       #hour,
       #minute,
       #second {
-        position: absolute;
+        position: relative;
         background: rgb(214, 27, 27);
         border-radius: 10px;
         transform-origin: bottom;
+        top: 14%;
       }
       #hour {
+        position: absolute;
+        background: rgb(151, 183, 25);
         width: 2%;
         height: 25%;
-        top: 25%;
+        top: 16.5%;
         left: 48.88%;
         opacity: 0.8;
       }
       #second {
+        position: absolute;
         width: 1.6%;
-        height: 32%;
-        top: 14%;
+        height: 28%;
+        top: 13%;
         left: 49%;
         opacity: 0.8;
         /* display: none; */
       }
       #minute {
+        background: rgb(19, 13, 213);
+        position: absolute;
         width: 1.8%;
         height: 30%;
-        top: 20%;
+        top: 11.85%;
         left: 49%;
         opacity: 0.8;
         /* display: none; */
